# pyapi-compat-if

./: .gitignore  CMakeLists.txt  README.md  ivpm.yaml  setup.py
.github/workflows/: ci.yml
python/: PyEvalExt.cpp  PyEvalExt.h  core.pyx
python/pyapi_compat_if/: __init__.py  core.pxd  decl.pxd  pkginfo.py
scripts/: build_linux.sh  gen_py_if.py
src/: CMakeLists.txt  Factory.cpp  Factory.h  PyEval.cpp  PyEval.h
src/include/pyapi-compat-if/: IFactory.h  IPyEval.h
test/: CMakeLists.txt
test/src/: TestBase.cpp  TestBase.h  TestLoadPyEval.cpp  TestLoadPyEval.h
